Concluded totem screen, and created assembler to stage data